--- a/jwala-webservices/build.gradle
+++ b/jwala-webservices/build.gradle
@@ -8,16 +8,16 @@ dependencies {
     testCompile group: "org.mockito", name: "mockito-core", version: "$project.versions.mockito"
     testCompile group: 'org.objenesis', name: 'objenesis', version: "$project.versions.objenesis"
     testCompile group: "org.springframework", name: "spring-test", version: "$project.versions.spring"
-	
+
     compile group: "org.apache.cxf", name: "cxf-rt-frontend-jaxws", version: "$project.versions.cxf"
     compile group: "org.apache.cxf", name: "cxf-rt-transports-http", version: "$project.versions.cxf"
     compile group: "org.apache.cxf", name: "cxf-rt-frontend-jaxrs", version: "$project.versions.cxf"
-    
-	compile group: 'org.springframework.security', name: 'spring-security-web', version: "$project.versions.spring_security"
-	compile group: "org.springframework.security", name: "spring-security-config", version: "$project.versions.spring_security"
+
+    compile group: 'org.springframework.security', name: 'spring-security-web', version: "$project.versions.spring_security"
+    compile group: "org.springframework.security", name: "spring-security-config", version: "$project.versions.spring_security"
     compile group: "org.springframework.security", name: "spring-security-ldap", version: "$project.versions.spring_security"
-	
-	
+
+
     compile group: "javax.ws.rs", name: "javax.ws.rs-api", version: "$project.versions.javax_ws_rs_api"
     compile group: "org.springframework", name: "spring-web", version: "$project.versions.spring"
     compile group: "org.codehaus.jackson", name: "jackson-jaxrs", version: "$project.versions.jackson"
@@ -25,8 +25,14 @@ dependencies {
     compile group: "commons-fileupload", name: "commons-fileupload", version: "$project.versions.commons_fileupload"
     compile group: "commons-io", name: "commons-io", version: "$project.versions.jodaTime"
     compile group: "org.jgroups", name: "jgroups", version: "$project.versions.jgroups"
+    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '3.5.0.201409260305-r'
 
-	testRuntime group: 'org.apache.tomcat', name: 'tomcat-coyote', version: "$project.versions.tomcat"
+    compile group: 'org.apache.maven.shared', name: 'maven-invoker', version: '2.1.1'
+
+    compile group: 'org.apache.maven', name: 'maven-embedder', version: '3.0.4'
+
+
+    testRuntime group: 'org.apache.tomcat', name: 'tomcat-coyote', version: "$project.versions.tomcat"
 
     testCompile group: 'org.apache.tomcat', name: 'tomcat-catalina', version: "$project.versions.tomcat"
 }
