--- a/jwala-services/build.gradle
+++ b/jwala-services/build.gradle
@@ -33,6 +33,15 @@ dependencies {
     compile group: "org.springframework.security", name: "spring-security-config", version: "$project.versions.spring_security"
     compile group: "org.springframework.security", name: "spring-security-ldap", version: "$project.versions.spring_security"
 
+
+    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '3.5.0.201409260305-r'
+
+    compile group: 'org.apache.maven.shared', name: 'maven-invoker', version: '2.1.1'
+
+    compile group: 'org.apache.maven', name: 'maven-embedder', version: '3.0.4'
+
+
+
     compile group: 'org.slf4j', name: 'slf4j-api', version: "$project.versions.slf4j"
     testCompile group: "org.slf4j", name:"slf4j-log4j12", version:"$project.versions.slf4j"
     testCompile group: "log4j", name:"log4j", version:"$project.versions.log4j"
